+ Настоящий IP теперь пробрасывается к Flask.

--- a/experimental/cdn_nginx/site.conf
+++ b/experimental/cdn_nginx/site.conf
@@ -13,7 +13,7 @@ server {
 
     location /cdn/ {
     secure_link $arg_md5,$arg_expires;
-    secure_link_md5 "$secure_link_expires $uri eoni2q_dfgdf55p136e&2wy_dfgdddgx0";
+    secure_link_md5 "$secure_link_expires $uri $remote_addr eoni2q_dfgdf55p136e&2wy_dfgdddgx0";
 
     if ($secure_link = "") {
         return 403;
