+ Готов проброс env переменных в конфиг nginx

--- a/experimental/cdn_nginx/nginx.conf
+++ b/experimental/cdn_nginx/nginx.conf
@@ -1,13 +1,16 @@
+#load_module /usr/lib/nginx/modules/ngx_http_perl_module.so;
 worker_processes  4;
 worker_rlimit_nofile 8192;
 events {
   worker_connections  1024;
 }
 
+
 http {
+
   include       mime.types;
   log_format  json  '{ "time": "$time_local", '
-                    '"service_name": "UGC Gateway API", '
+                    '"service_name": "CDN API", '
                    '"remote_ip": "$remote_addr", '
                    '"remote_user": "$remote_user", '
                    '"request": "$request", '
@@ -15,6 +18,7 @@ http {
                    '"bytes": "$body_bytes_sent", '
                    '"referrer": "$http_referer", '
                    '"agent": "$http_user_agent", '
+#                   '"env": "${api_key}", '
                    '"request_id": "$request_id"}';
 
   access_log /var/log/nginx/nginx-access.json json;
@@ -36,6 +40,7 @@ http {
         text/javascript;
 
   server_tokens off;
+#  perl_set $api_key 'sub { return $ENV{"SECRET_KEY"}; }';
   proxy_redirect     off;
   proxy_set_header   Host             $host;
   proxy_set_header   X-Real-IP        $remote_addr;
