--- a/experimental/cdn_nginx/site.conf.template
+++ b/experimental/cdn_nginx/site.conf.template
@@ -5,7 +5,6 @@ server {
 
     root /;
 
-
     location @backend {
         limit_req zone=one burst=12 delay=8;
         proxy_pass http://cdn_api:5000;
@@ -13,7 +12,7 @@ server {
 
     location /cdn/ {
     secure_link $arg_md5,$arg_expires;
-    secure_link_md5 "$secure_link_expires $uri $remote_addr eoni2q_dfgdf55p136e&2wy_dfgdddgx0";
+    secure_link_md5 "$secure_link_expires $uri $remote_addr ${SECRET_KEY}";
 
     if ($secure_link = "") {
         return 403;
