+ добавлено ограничение скорости и число соединений к видео

--- a/experimental/cdn_nginx/nginx.conf
+++ b/experimental/cdn_nginx/nginx.conf
@@ -1,4 +1,3 @@
-#load_module /usr/lib/nginx/modules/ngx_http_perl_module.so;
 worker_processes  4;
 worker_rlimit_nofile 8192;
 events {
@@ -18,7 +17,6 @@ http {
                    '"bytes": "$body_bytes_sent", '
                    '"referrer": "$http_referer", '
                    '"agent": "$http_user_agent", '
-#                   '"env": "${api_key}", '
                    '"request_id": "$request_id"}';
 
   access_log /var/log/nginx/nginx-access.json json;
@@ -40,15 +38,16 @@ http {
         text/javascript;
 
   server_tokens off;
-#  perl_set $api_key 'sub { return $ENV{"SECRET_KEY"}; }';
+  directio 10m;
   proxy_redirect     off;
   proxy_set_header   Host             $host;
   proxy_set_header   X-Real-IP        $remote_addr;
   proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-
-
-  limit_req_zone $proxy_add_x_forwarded_for zone=one:100m rate=100r/s;
-  limit_conn_zone $http_x_forwarded_for zone=conn_limit_per_ip:100m;
+  limit_conn_log_level warn;
+  limit_conn_status 429;
+  limit_req_zone $proxy_add_x_forwarded_for zone=one:10m rate=100r/s;
+  limit_conn_zone $http_x_forwarded_for zone=conn_limit_per_ip:10m;
+  limit_conn_zone $binary_remote_addr zone=ip_addr:10m;
 
   include conf.d/site.conf;
 } 
