+ добавлены html шаблоны видеоплееров

--- a/experimental/cdn_nginx/nginx.conf
+++ b/experimental/cdn_nginx/nginx.conf
@@ -48,6 +48,6 @@ http {
   limit_req_zone $proxy_add_x_forwarded_for zone=one:10m rate=100r/s;
   limit_conn_zone $http_x_forwarded_for zone=conn_limit_per_ip:10m;
   limit_conn_zone $binary_remote_addr zone=ip_addr:10m;
-
+  limit_rate_after 500k;
   include conf.d/site.conf;
 } 
