--- a/experimental/cdn_nginx/site.conf.template
+++ b/experimental/cdn_nginx/site.conf.template
@@ -9,6 +9,31 @@ server {
         limit_req zone=one burst=12 delay=8;
         proxy_pass http://cdn_api:5000;
     }
+    location /cdn/master/ {
+    mp4;
+    mp4_buffer_size     5m;
+    mp4_max_buffer_size 30m;
+
+
+    limit_conn ip_addr 5;
+#     limit_rate ${LIMIT_RATE_144};
+
+    try_files $uri $uri/ =404;
+
+    secure_link $arg_md5,$arg_expires;
+    secure_link_md5 "$secure_link_expires $uri $remote_addr ${SECRET_KEY}";
+
+    if ($secure_link = "") {
+        return 403;
+    }
+
+    if ($secure_link = "0") {
+        return 410;
+    }
+
+    alias /cdn/;
+
+}
 
     location /cdn/144p/ {
     mp4;
