--- a/Dockerfile_func
+++ b/Dockerfile_func
@@ -8,6 +8,7 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY requirements.dev.txt /app/requirements.dev.txt
+COPY src/wait_for_pg.py /app/wait_for_pg.py
 
 RUN apk update --no-cache \
 && apk add build-base --no-cache --virtual .build-deps \
@@ -18,4 +19,4 @@ RUN apk update --no-cache \
 COPY src/service/ /app/service/
 COPY src/functional/ /app/functional/
 
-ENTRYPOINT ["pytest", "-s", "-v", "--asyncio-mode=strict", "functional/"]
+ENTRYPOINT pytest -s -v --asyncio-mode=strict functional/
