--- a/Dockerfile_unittest
+++ b/Dockerfile_unittest
@@ -8,6 +8,8 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY requirements.dev.txt /app/requirements.dev.txt
+COPY src/wait_for_pg.py /app/wait_for_pg.py
+COPY src/wait_for_redis.py /app/wait_for_redis.py
 
 RUN apk update --no-cache \
 && apk add build-base --no-cache --virtual .build-deps \
@@ -18,4 +20,4 @@ RUN apk update --no-cache \
 COPY src/service/  /app/service/
 COPY src/tests/ /app/tests/
 
-ENTRYPOINT ["pytest", "-s", "-v", "--asyncio-mode=strict"]
+ENTRYPOINT python3 wait_for_redis.py; python3 wait_for_pg.py; pytest -s -v --asyncio-mode=strict
