--- a/experimental/cdn_backend/.env.example
+++ b/experimental/cdn_backend/.env.example
@@ -2,8 +2,9 @@ SECRET_KEY=eoni2q_dfgdf55p136e&2wy_dfgdddgx0
 SALT=8784dgdfgw44fe73sdf7r72s7
 LINK_EXPIRES_HOURS=2
 CDN_API_PORT=5000
-LIMIT_RATE_1080=196K
+LIMIT_RATE_1080=1M
 LIMIT_RATE_720=98K
 LIMIT_RATE_480=64K
+LIMIT_RATE_360=48K
 LIMIT_RATE_240=32K
 LIMIT_RATE_144=16K
