--- a/experimental/cdn_mirror/site.conf.template
+++ b/experimental/cdn_mirror/site.conf.template
@@ -7,7 +7,7 @@ server {
 
     location @backend {
         limit_req zone=one burst=12 delay=8;
-        proxy_pass http://cdn_api_main:5000;
+        proxy_pass http://mirror_api:5000;
     }
     location /cdn/master/ {
     mp4;
