--- a/experimental/cdn_nginx/site.conf.template
+++ b/experimental/cdn_nginx/site.conf.template
@@ -7,7 +7,7 @@ server {
 
     location @backend {
         limit_req zone=one burst=12 delay=8;
-        proxy_pass http://cdn_api_main:5000;
+        proxy_pass http://cdn_api:5000;
     }
     location /cdn/master/ {
     mp4;
@@ -87,32 +87,6 @@ server {
 
 }
 
-    location /cdn/360p/ {
-    mp4;
-    mp4_buffer_size     1m;
-    mp4_max_buffer_size 5m;
-
-
-    limit_conn ip_addr 1;
-    limit_rate ${LIMIT_RATE_360};
-
-    try_files $uri $uri/ =404;
-
-    secure_link $arg_md5,$arg_expires;
-    secure_link_md5 "$secure_link_expires $uri $remote_addr ${SECRET_KEY}";
-
-    if ($secure_link = "") {
-        return 403;
-    }
-
-    if ($secure_link = "0") {
-        return 410;
-    }
-
-    alias /cdn/;
-
-}
-
     location /cdn/480p/ {
     mp4;
     mp4_buffer_size     1m;
@@ -169,7 +143,7 @@ server {
     mp4;
     mp4_buffer_size     3m;
     mp4_max_buffer_size 20m;
-    limit_conn ip_addr 3;
+    limit_conn ip_addr 1;
     limit_rate ${LIMIT_RATE_1080};
 
     try_files $uri $uri/ =404;
