--- a/nginx/site.conf.template
+++ b/nginx/site.conf.template
@@ -167,14 +167,14 @@ server {
 
     }
 
-    location / {
-        try_files $uri $uri/ @backend;
+#    location / {
+#        try_files $uri $uri/ @backend;
+#    }
+
+
+     error_page   404              /404.html;
+     error_page   500 502 503 504  /50x.html;
+     location = /50x.html {
+         root   html;
     }
-
-
-#     error_page   404              /404.html;
-#     error_page   500 502 503 504  /50x.html;
-#     location = /50x.html {
-#         root   html;
-#     }
 }
