fix 360p bitrate config

--- a/nginx/.env.example
+++ b/nginx/.env.example
@@ -4,5 +4,6 @@ CDN_API_PORT=8080
 LIMIT_RATE_1080=196K
 LIMIT_RATE_720=98K
 LIMIT_RATE_480=64K
+LIMIT_RATE_360=54K
 LIMIT_RATE_240=32K
 LIMIT_RATE_144=16K
