--- a/nginx/site.conf.template
+++ b/nginx/site.conf.template
@@ -9,6 +9,25 @@ server {
 #        limit_req zone=one burst=12 delay=8;
 #        proxy_pass http://cdn_service:8080;
 #    }
+
+    location / {
+    mp4;
+    mp4_buffer_size     3m;
+    mp4_max_buffer_size 20m;
+    limit_conn ip_addr 1;
+    limit_rate ${LIMIT_RATE_1080};
+
+    try_files $uri $uri/ =404;
+
+    secure_link $arg_md5,$arg_expires;
+    secure_link_md5 "$secure_link_expires $uri $remote_addr ${SECRET_KEY}";
+
+    if ($secure_link = "") {
+        return 403;
+    }
+
+ }
+
     location /cdn/master/ {
     mp4;
     mp4_buffer_size     5m;
