--- a/docker-compose.func.yaml
+++ b/docker-compose.func.yaml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.5"
 
 services:
 
@@ -18,42 +18,6 @@ services:
     ports:
       - "6379:6379"
 
-  nginx_cdn_main:
-    image: nginx:1.19.2
-    container_name: nginx_cdn_main
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/site.conf.template:/etc/nginx/templates/site.conf.template
-      - cdn_main:/cdn/
-    ports:
-      - "8081:80"
-    env_file:
-      - nginx/.env.example
-
-  nginx_cdn_1:
-    image: nginx:1.19.2
-    container_name: nginx_cdn_1
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/site.conf.template:/etc/nginx/templates/site.conf.template
-      - cdn_1:/cdn/
-    ports:
-      - "8082:80"
-    env_file:
-      - nginx/.env.example
-
-  nginx_cdn_2:
-    image: nginx:1.19.2
-    container_name: nginx_cdn_2
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/site.conf.template:/etc/nginx/templates/site.conf.template
-      - cdn_2:/cdn/
-    ports:
-      - "8083:80"
-    env_file:
-      - nginx/.env.example
-
   cdn_service:
     image: cdn_image
     volumes:
@@ -67,15 +31,59 @@ services:
     depends_on:
       - db
       - redis
-      - nginx_cdn_main
-      - nginx_cdn_1
-      - nginx_cdn_2
     ports:
       - "8080:8080"
 
+  nginx_cdn_main:
+    image: nginx:1.19.2
+    container_name: nginx_cdn_main
+    restart: unless-stopped
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/site.conf.template:/etc/nginx/templates/site.conf.template
+      - cdn_main:/cdn/
+    ports:
+      - "8081:80"
+    env_file:
+      - nginx/.env.example
+    depends_on:
+      - cdn_service
+
+
+  nginx_cdn_1:
+    image: nginx:1.19.2
+    container_name: nginx_cdn_1
+    restart: unless-stopped
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/site.conf.template:/etc/nginx/templates/site.conf.template
+      - cdn_1:/cdn/
+    ports:
+      - "8082:80"
+    env_file:
+      - nginx/.env.example
+    depends_on:
+      - cdn_service
+
+  nginx_cdn_2:
+    image: nginx:1.19.2
+    container_name: nginx_cdn_2
+    restart: unless-stopped
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/site.conf.template:/etc/nginx/templates/site.conf.template
+      - cdn_2:/cdn/
+    ports:
+      - "8083:80"
+    env_file:
+      - nginx/.env.example
+    depends_on:
+      - cdn_service
+
+
 volumes:
   cdn_main:
-    external: true
+    name: cdn_main_volume
   cdn_1:
     external: true
   cdn_2:
