--- a/nginx/site.conf.template
+++ b/nginx/site.conf.template
@@ -5,12 +5,12 @@ server {
 
     root /;
 
-#    location @backend {
-#        limit_req zone=one burst=12 delay=8;
-#        proxy_pass http://cdn_service:8080;
-#    }
+    location @backend {
+        limit_req zone=one burst=12 delay=8;
+        proxy_pass http://cdn_service:8080;
+    }
 
-    location / {
+    location /cdn/ {
     mp4;
     mp4_buffer_size     3m;
     mp4_max_buffer_size 20m;
